fix CSS overflow on events

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,7 +11,6 @@ div#siaApp {
 
 .incident-row {
   border: 1px ;
-  display: flex;
   flex: 1;
 	padding-left: 2%;
   padding-right: 2%;
@@ -21,7 +20,6 @@ div#siaApp {
   max-width: 100%;
   box-sizing: border-box;
   border: 1px ;
-  display: flex;
   flex: 1;
   flex-wrap: nowrap;
   align-items: center;
@@ -30,13 +28,11 @@ div#siaApp {
 }
 
 .incident-steplabel {
-	display: flex;
 	flex-direction: column;
   justify-content: space-between;
 }
 
 .incident-EventFilter {
-  display: flex;
   flex: 1;
   justify-content: space-between;
   align-items: center;
@@ -44,11 +40,12 @@ div#siaApp {
 }
 
 .incident-EventFooter {
-  display: flex;
   flex: 1;
   align-items: center;
   justify-content: space-between;
-  padding: 2%;
+  padding: 2%; 
+  display: flex;
+  flex-direction: row;
 }
 
 @media (max-width: 1800px) {
